# currency-converter-example

./: .dockerignore  .gitignore  README.md  pyproject.toml
app/: __init__.py  application.py  config.py  containers.py  settings.py  util.py
app/api/http/: __init__.py  converter.py
app/schemas/: __init__.py  converter.py
app/services/: converter.py
app/services/apilayer/: schemas.py  services.py  settings.py
run/: Dockerfile.app  start.sh
tests/: conftest.py  test_converter.py
