[tool.poetry]
name = "converter"
version = "0.1.0"
description = "Currency converter example"
authors = ["plutonium <plutonium.max@gmail.com>"]

packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
httpx = "^0.23.0"
uvicorn = "^0.19.0"
dependency-injector = "^4.40.0"
timeparse-plus = "^1.2.0"
tomlkit = "<0.6.0"
poetry-version = "^0.2.0"
ujson = "^5.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app:run"
